# UniMiB-Lab

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
tests/: test_esempio.py
unimi_lab.egg-info/: PKG-INFO
unimib_lab/: __init__.py  data.py  fit.py  plot.py
unimib_lab.egg-info/: SOURCES.txt  requires.txt  top_level.txt
