[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unimib_lab"
version = "0.1.0"
description = "Libreria di funzioni per UniMiB-Lab"
authors = [
    { name = "Tuo Nome", email = "tuo@email.com" }
]
readme = "README.md"
requires-python = ">=3.7"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
